Adjustments to the Cookies Modal, so it is visible ( changes prompted because the navigation bar was made fixed )

--- a/MatchFixer-Web-App/wwwroot/css/cookies/cookies.css
+++ b/MatchFixer-Web-App/wwwroot/css/cookies/cookies.css
@@ -1,4 +1,9 @@
-﻿#cookieConsentModal .modal-content {
+﻿#cookieConsentModal{
+    margin-top: 5.5em;
+}
+
+
+#cookieConsentModal .modal-content {
     border: 2px solid #0d6efd;
 }
 
